; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/access/nbtree/extr_nbtsearch.c__bt_search.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/access/nbtree/extr_nbtsearch.c__bt_search.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { %struct.TYPE_8__*, i32, i32 }
%struct.TYPE_9__ = type { %struct.TYPE_7__ }
%struct.TYPE_7__ = type { i32 }

@BT_READ = common dso_local global i32 0, align 4
@BT_WRITE = common dso_local global i32 0, align 4
@BUFFER_LOCK_UNLOCK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_8__* @_bt_search(i32 %0, i32 %1, i32* %2, i32 %3, i32 %4) #0 {
  %6 = alloca %struct.TYPE_8__*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca %struct.TYPE_8__*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca %struct.TYPE_9__*, align 8
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i64, align 8
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  %21 = alloca %struct.TYPE_8__*, align 8
  store i32 %0, i32* %7, align 4
  store i32 %1, i32* %8, align 4
  store i32* %2, i32** %9, align 8
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  store %struct.TYPE_8__* null, %struct.TYPE_8__** %12, align 8
  %22 = load i32, i32* @BT_READ, align 4
  store i32 %22, i32* %13, align 4
  %23 = load i32, i32* %7, align 4
  %24 = load i32, i32* %10, align 4
  %25 = call i32 @_bt_getroot(i32 %23, i32 %24)
  %26 = load i32*, i32** %9, align 8
  store i32 %25, i32* %26, align 4
  %27 = load i32*, i32** %9, align 8
  %28 = load i32, i32* %27, align 4
  %29 = call i32 @BufferIsValid(i32 %28)
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %32, label %31

31:                                               ; preds = %5
  store %struct.TYPE_8__* null, %struct.TYPE_8__** %6, align 8
  br label %133

32:                                               ; preds = %5
  br label %33

33:                                               ; preds = %96, %32
  %34 = load i32, i32* %7, align 4
  %35 = load i32, i32* %8, align 4
  %36 = load i32*, i32** %9, align 8
  %37 = load i32, i32* %36, align 4
  %38 = load i32, i32* %10, align 4
  %39 = load i32, i32* @BT_WRITE, align 4
  %40 = icmp eq i32 %38, %39
  %41 = zext i1 %40 to i32
  %42 = load %struct.TYPE_8__*, %struct.TYPE_8__** %12, align 8
  %43 = load i32, i32* %13, align 4
  %44 = load i32, i32* %11, align 4
  %45 = call i32 @_bt_moveright(i32 %34, i32 %35, i32 %37, i32 %41, %struct.TYPE_8__* %42, i32 %43, i32 %44)
  %46 = load i32*, i32** %9, align 8
  store i32 %45, i32* %46, align 4
  %47 = load i32*, i32** %9, align 8
  %48 = load i32, i32* %47, align 4
  %49 = call i32 @BufferGetPage(i32 %48)
  store i32 %49, i32* %14, align 4
  %50 = load i32, i32* %14, align 4
  %51 = call i64 @PageGetSpecialPointer(i32 %50)
  %52 = inttoptr i64 %51 to %struct.TYPE_9__*
  store %struct.TYPE_9__* %52, %struct.TYPE_9__** %15, align 8
  %53 = load %struct.TYPE_9__*, %struct.TYPE_9__** %15, align 8
  %54 = call i64 @P_ISLEAF(%struct.TYPE_9__* %53)
  %55 = icmp ne i64 %54, 0
  br i1 %55, label %56, label %57

56:                                               ; preds = %33
  br label %105

57:                                               ; preds = %33
  %58 = load i32, i32* %7, align 4
  %59 = load i32, i32* %8, align 4
  %60 = load i32*, i32** %9, align 8
  %61 = load i32, i32* %60, align 4
  %62 = call i32 @_bt_binsrch(i32 %58, i32 %59, i32 %61)
  store i32 %62, i32* %16, align 4
  %63 = load i32, i32* %14, align 4
  %64 = load i32, i32* %16, align 4
  %65 = call i32 @PageGetItemId(i32 %63, i32 %64)
  store i32 %65, i32* %17, align 4
  %66 = load i32, i32* %14, align 4
  %67 = load i32, i32* %17, align 4
  %68 = call i64 @PageGetItem(i32 %66, i32 %67)
  store i64 %68, i64* %18, align 8
  %69 = load i64, i64* %18, align 8
  %70 = call i32 @BTreeInnerTupleGetDownLink(i64 %69)
  store i32 %70, i32* %19, align 4
  %71 = load i32*, i32** %9, align 8
  %72 = load i32, i32* %71, align 4
  %73 = call i32 @BufferGetBlockNumber(i32 %72)
  store i32 %73, i32* %20, align 4
  %74 = call i64 @palloc(i32 4)
  %75 = inttoptr i64 %74 to %struct.TYPE_8__*
  store %struct.TYPE_8__* %75, %struct.TYPE_8__** %21, align 8
  %76 = load i32, i32* %20, align 4
  %77 = load %struct.TYPE_8__*, %struct.TYPE_8__** %21, align 8
  %78 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %77, i32 0, i32 2
  store i32 %76, i32* %78, align 4
  %79 = load i32, i32* %16, align 4
  %80 = load %struct.TYPE_8__*, %struct.TYPE_8__** %21, align 8
  %81 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %80, i32 0, i32 1
  store i32 %79, i32* %81, align 8
  %82 = load %struct.TYPE_8__*, %struct.TYPE_8__** %12, align 8
  %83 = load %struct.TYPE_8__*, %struct.TYPE_8__** %21, align 8
  %84 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %83, i32 0, i32 0
  store %struct.TYPE_8__* %82, %struct.TYPE_8__** %84, align 8
  %85 = load %struct.TYPE_9__*, %struct.TYPE_9__** %15, align 8
  %86 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %85, i32 0, i32 0
  %87 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %86, i32 0, i32 0
  %88 = load i32, i32* %87, align 4
  %89 = icmp eq i32 %88, 1
  br i1 %89, label %90, label %96

90:                                               ; preds = %57
  %91 = load i32, i32* %10, align 4
  %92 = load i32, i32* @BT_WRITE, align 4
  %93 = icmp eq i32 %91, %92
  br i1 %93, label %94, label %96

94:                                               ; preds = %90
  %95 = load i32, i32* @BT_WRITE, align 4
  store i32 %95, i32* %13, align 4
  br label %96

96:                                               ; preds = %94, %90, %57
  %97 = load i32, i32* %7, align 4
  %98 = load i32*, i32** %9, align 8
  %99 = load i32, i32* %98, align 4
  %100 = load i32, i32* %19, align 4
  %101 = load i32, i32* %13, align 4
  %102 = call i32 @_bt_relandgetbuf(i32 %97, i32 %99, i32 %100, i32 %101)
  %103 = load i32*, i32** %9, align 8
  store i32 %102, i32* %103, align 4
  %104 = load %struct.TYPE_8__*, %struct.TYPE_8__** %21, align 8
  store %struct.TYPE_8__* %104, %struct.TYPE_8__** %12, align 8
  br label %33

105:                                              ; preds = %56
  %106 = load i32, i32* %10, align 4
  %107 = load i32, i32* @BT_WRITE, align 4
  %108 = icmp eq i32 %106, %107
  br i1 %108, label %109, label %131

109:                                              ; preds = %105
  %110 = load i32, i32* %13, align 4
  %111 = load i32, i32* @BT_READ, align 4
  %112 = icmp eq i32 %110, %111
  br i1 %112, label %113, label %131

113:                                              ; preds = %109
  %114 = load i32*, i32** %9, align 8
  %115 = load i32, i32* %114, align 4
  %116 = load i32, i32* @BUFFER_LOCK_UNLOCK, align 4
  %117 = call i32 @LockBuffer(i32 %115, i32 %116)
  %118 = load i32*, i32** %9, align 8
  %119 = load i32, i32* %118, align 4
  %120 = load i32, i32* @BT_WRITE, align 4
  %121 = call i32 @LockBuffer(i32 %119, i32 %120)
  %122 = load i32, i32* %7, align 4
  %123 = load i32, i32* %8, align 4
  %124 = load i32*, i32** %9, align 8
  %125 = load i32, i32* %124, align 4
  %126 = load %struct.TYPE_8__*, %struct.TYPE_8__** %12, align 8
  %127 = load i32, i32* @BT_WRITE, align 4
  %128 = load i32, i32* %11, align 4
  %129 = call i32 @_bt_moveright(i32 %122, i32 %123, i32 %125, i32 1, %struct.TYPE_8__* %126, i32 %127, i32 %128)
  %130 = load i32*, i32** %9, align 8
  store i32 %129, i32* %130, align 4
  br label %131

131:                                              ; preds = %113, %109, %105
  %132 = load %struct.TYPE_8__*, %struct.TYPE_8__** %12, align 8
  store %struct.TYPE_8__* %132, %struct.TYPE_8__** %6, align 8
  br label %133

133:                                              ; preds = %131, %31
  %134 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  ret %struct.TYPE_8__* %134
}

declare dso_local i32 @_bt_getroot(i32, i32) #1

declare dso_local i32 @BufferIsValid(i32) #1

declare dso_local i32 @_bt_moveright(i32, i32, i32, i32, %struct.TYPE_8__*, i32, i32) #1

declare dso_local i32 @BufferGetPage(i32) #1

declare dso_local i64 @PageGetSpecialPointer(i32) #1

declare dso_local i64 @P_ISLEAF(%struct.TYPE_9__*) #1

declare dso_local i32 @_bt_binsrch(i32, i32, i32) #1

declare dso_local i32 @PageGetItemId(i32, i32) #1

declare dso_local i64 @PageGetItem(i32, i32) #1

declare dso_local i32 @BTreeInnerTupleGetDownLink(i64) #1

declare dso_local i32 @BufferGetBlockNumber(i32) #1

declare dso_local i64 @palloc(i32) #1

declare dso_local i32 @_bt_relandgetbuf(i32, i32, i32, i32) #1

declare dso_local i32 @LockBuffer(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
